--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "env-cmd": "^10.1.0"
   },
   "scripts": {
-    "start": "env-cmd -f .env.development react-scripts start",
+    "start": "set PORT=9001 && env-cmd -f .env.development react-scripts start",
     "build": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
